tdf#166201 docx import: simplePos is defined in EMUs, not TWIPs

The normal values of simplePos are usually larger than
ConversionHelper::convertTwipToMm100_Limited allows,
so it typically returned 0,
so usually the anchor was positioned at the top left of the page.

There were no existing unit tests with non-zero simplePos.

Although LN_CT_Point2D_x sounds very generic,
commit history suggests that it has only been used for simplePos.
   (handle wp:simplePos properly)
I also checked model.xml, and didn't notice anything else
actually being imported that could share it.
Based on the documentation, they all would also be defined
in EMUs or "Universal Measurement".

make CppunitTest_sw_ooxmlexport22 \
    CPPUNIT_TEST_NAME=testTdf166201_simplePos

Change-Id: I65f49408262c8f68107fa1614f70ff2f8365e5c6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184244
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184246
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>